osso-app-killer (1.16-1~unreleased) unstable; urgency=low

  * Use osso-product-info, if available, to get the product name.
  * Spare 'system/bluetooth' GConf keys in ROS. Fixes: NB#59060
  * Use 'cat' instead of 'cp' to restore the locale file, avoiding the busybox
    strangeness.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 24 Sep 2007 16:34:54 +0300

osso-app-killer (1.15-1.1) unstable; urgency=low

  * Increasing the version, rebuilding with libdbus-1-3 is needed

 -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Mon, 26 Feb 2007 15:50:00 +0200

osso-app-killer (1.15-1) unstable; urgency=low

  * Not clearing VOIP accounts anymore in ROS. Fixes: NB#41676

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 28 Nov 2006 16:56:04 +0200

osso-app-killer (1.14-1) unstable; urgency=low

  * Fixed product name. Fixes: NB#47016

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 13 Nov 2006 12:47:27 +0200

osso-app-killer (1.13-1) unstable; urgency=low

  * Fixed ROS and CUD to do nothing in case the flash is too full.
    Fixes: NB#43067

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 16 Oct 2006 17:11:14 +0300

osso-app-killer (1.12-1) unstable; urgency=low

  * Now using the new location for .games folder. Fixes: NB#42525

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 10 Oct 2006 18:06:03 +0300

osso-app-killer (1.11-1) unstable; urgency=low

  * Not resetting language in ROS. Fixes: NB#42802

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 10 Oct 2006 17:51:48 +0300

osso-app-killer (1.10-2) unstable; urgency=low

  * Added license reference to debian/copyright.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 03 Oct 2006 16:48:17 +0300

osso-app-killer (1.10-1) unstable; urgency=low

  * Now preserving 'rtcom' GConf paths in ROS. Fixes: NB#41676
  * Now running gconf-clean.sh without 'sudo' also in ROS.
  * Added dependency to sudo.
