@@ -1,1 +1,2 @@
 *.sh /usr/sbin
+osso-app-killer.sudoers /etc/sudoers.d
