@@ -49,6 +49,10 @@ case "$1" in
     ;;
 esac
 
+if [ -x /usr/sbin/update-sudoers ]; then
+        /usr/sbin/update-sudoers
+fi
+
 # dh_installdeb will replace this with shell code automatically
 # generated by other debhelper scripts.
 
