@@ -1,0 +1,4 @@
+user ALL = NOPASSWD: umount /media/mmc2 
+user ALL = NOPASSWD: /usr/sbin/osso-prepare-partition.sh *
+user ALL = NOPASSWD: mkdosfs *
+
